@@ -28,8 +28,6 @@ sub parse
         postprocess_datablock( $datablock, $datablock->{cifversion} );
     }
 
-    $data = [ map { decode_utf8_frame($_) } @{$data} ];
-
     my @errors;
     my @warnings;
     foreach my $message ( @{$messages} ) {
@@ -169,95 +167,6 @@ sub extract_precision
     } else {
         return ( undef, 0 );
     }
-}
-
-sub decode_utf8_frame
-{
-    my ( $frame ) = @_;
-
-    foreach ( 'name', 'tags', 'loops' ) {
-        if ( exists $frame->{$_} ) {
-            $frame->{$_} = decode_utf8_values($frame->{$_});
-        };
-    }
-
-    foreach ( 'precisions', 'inloop', 'values', 'types' ) {
-        if ( exists $frame->{$_} ) {
-            $frame->{$_} = decode_utf8_hash_keys($frame->{$_});
-        };
-    }
-
-    if ( exists $frame->{'values'} &&  exists $frame->{'types'} ) {
-        $frame->{'values'} = decode_utf8_typed_values($frame->{'values'},
-                                                      $frame->{'types'});
-    }
-
-    if ( exists $frame->{'save_blocks'} ) {
-        $frame->{'save_blocks'} = [ map { decode_utf8_frame($_) }
-                                        @{$frame->{'save_blocks'}} ];
-    }
-
-    return $frame;
-}
-
-sub decode_utf8_hash_keys
-{
-    my ( $values ) = @_;
-
-    if ( ref( $values ) eq 'ARRAY' ) {
-        for( my $i = 0; $i < @{$values}; $i++ ) {
-            $values->[$i] = decode_utf8_hash_keys($values->[$i]);
-        }
-    } elsif ( ref( $values ) eq 'HASH' ) {
-        foreach my $key ( keys %{$values} ) {
-           $values->{$key} = decode_utf8_hash_keys($values->{$key});
-           my $new_key = decode_utf8_values($key);
-           if ($new_key ne $key) {
-               $values->{$new_key} = $values->{$key};
-               delete $values->{$key};
-           }
-        }
-    }
-
-    return $values;
-}
-
-sub decode_utf8_values
-{
-    my ( $values ) = @_;
-
-    if ( ref( $values ) eq 'ARRAY' ) {
-        for( my $i = 0; $i < @{$values}; $i++ ) {
-            $values->[$i] = decode_utf8_values($values->[$i]);
-        }
-    } elsif ( ref( $values ) eq 'HASH' ) {
-        foreach my $key ( keys %{$values} ) {
-           $values->{$key} = decode_utf8_values($values->{$key});
-        }
-    } else {
-        $values = decode('utf8', $values);
-    }
-
-    return $values;
-}
-
-sub decode_utf8_typed_values
-{
-    my ( $values, $types ) = @_;
-
-    if ( ref( $values ) eq 'ARRAY' ) {
-        for( my $i = 0; $i < @{$values}; $i++ ) {
-            $values->[$i] = decode_utf8_typed_values($values->[$i], $types->[$i]);
-        }
-    } elsif ( ref( $values ) eq 'HASH' ) {
-        foreach my $key ( keys %{$values} ) {
-           $values->{$key} = decode_utf8_typed_values($values->{$key}, $types->{$key});
-        }
-    } elsif ( $types ne 'INT' && $types ne 'FLOAT' ) {
-        $values = decode_utf8_values($values);
-    }
-
-    return $values;
 }
 
 %}
