@@ -14,6 +14,9 @@ cod-tools (unreleased)
     - COD::CIF::DDL::DDL1:
       - the get_list_constraint_type() and get_dic_item_value() subroutines.
   * Changed:
+    - COD::CIF::Parser::Bison:
+      - marking strings as UTF-8 using low-level Perl API to improve the
+        performance.
     - cif_validate:
       - updated the range validation logic to always consider the standard
         uncertainty (s.u.) values even if the data item is not formally
